--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,26 @@
 buildscript {
+    repositories{
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+        gradlePluginPortal()
+    }
+
+    dependencies {
+        // Add the dependency for the Google services Gradle plugin
+        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
+    }
     ext {
         androidx_lifecycle = '2.6.1'
         compose_ui_version = '1.4.3'
         hilt_version = '2.44'
         retrofit_version = '2.9.0'
+        glide_version = '1.5.2'
+        coroutine_version = '1.3.9'
+        roomVersion = "2.4.3"
+        gsonVersion = "2.9.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -11,4 +28,6 @@ plugins {
     id 'com.android.library' version '7.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.21' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
+
 }
