--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,15 @@ dependencies {
     implementation "io.github.vanpra.compose-material-dialogs:datetime:0.8.1-rc"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.2'
 
+    // Glide
+    implementation "com.github.skydoves:landscapist-glide:$glide_version"
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.1.0"
+
+    // Accompanist - swipe refresh screen
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.27.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
