--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:0.27.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
 
+    // Gson
+    implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
     // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
