--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.2.2'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     // Retrofit - Moshi
